{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 64,
  "lineage": "0699edad-9686-2bd4-ecf3-45ac691d8a6d",
  "resources": [
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "client_keep_alive": 3600,
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267418676:loadbalancer/app/csw242-default-alb/d48619d58f31a193",
            "idle_timeout": 60,
            "load_balancer_type": "application",
            "name": "csw242-default-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09b860522658cfbe6"
            ],
            "subnets": [
              "subnet-0696e887db769759c",
              "subnet-070e6a5a8afc45670",
              "subnet-07a00ee4f5e4b5c41"
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.this",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267418676:targetgroup/tf-20241203221241639200000001/88da676f1a503305",
            "arn_suffix": "targetgroup/tf-20241203221241639200000001/88da676f1a503305",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267418676:targetgroup/tf-20241203221241639200000001/88da676f1a503305",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20241203221241639200000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:security-group/sg-09b860522658cfbe6",
            "description": "Security group for csw242-default-alb application load balancer",
            "egress": [],
            "id": "sg-09b860522658cfbe6",
            "ingress": [],
            "name": "csw242-default-alb-20241203221241641500000002",
            "name_prefix": "csw242-default-alb-",
            "owner_id": "533267418676",
            "revoke_rules_on_delete": false,
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:security-group-rule/sgr-0802067e88c124fef",
            "cidr_ipv4": "20.10.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0802067e88c124fef",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09b860522658cfbe6",
            "security_group_rule_id": "sgr-0802067e88c124fef",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.this",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs.module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:security-group-rule/sgr-0c58857278557ef64",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0c58857278557ef64",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09b860522658cfbe6",
            "security_group_rule_id": "sgr-0c58857278557ef64",
            "tags": {
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.module.alb.aws_security_group.this",
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service.module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ecs_service.module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:security-group/sg-090093622b97b2680",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-090093622b97b2680",
            "name": "default",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:network-acl/acl-0862f1fb228c185ca",
            "default_network_acl_id": "acl-0862f1fb228c185ca",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0862f1fb228c185ca",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "533267418676",
            "subnet_ids": [
              "subnet-02c5ca9812ceacf81",
              "subnet-02fd143859f2e92ab",
              "subnet-0672fb9e00d223e88",
              "subnet-0696e887db769759c",
              "subnet-070e6a5a8afc45670",
              "subnet-07a00ee4f5e4b5c41",
              "subnet-07c8f8d0025e1acfc",
              "subnet-092d9242a5b7c0fa0",
              "subnet-0f3e61428d4bb4004"
            ],
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-03db2d390b1b95094",
            "default_route_table_id": "rtb-03db2d390b1b95094",
            "id": "rtb-03db2d390b1b95094",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:security-group/sg-090093622b97b2680",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-090093622b97b2680",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "533267418676",
            "revoke_rules_on_delete": false,
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-default",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:internet-gateway/igw-00571ef628494a3a3",
            "id": "igw-00571ef628494a3a3",
            "owner_id": "533267418676",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00571ef628494a3a3",
            "id": "r-rtb-0314d46a821a2f0061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0314d46a821a2f006",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.vpc.module.aws_vpc.aws_route_table.database",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00571ef628494a3a3",
            "id": "r-rtb-0cfa6229215aea9ba1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cfa6229215aea9ba",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_internet_gateway.this",
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-0314d46a821a2f006",
            "id": "rtb-0314d46a821a2f006",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00571ef628494a3a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-0350554dcc51f4e9f",
            "id": "rtb-0350554dcc51f4e9f",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:route-table/rtb-0cfa6229215aea9ba",
            "id": "rtb-0cfa6229215aea9ba",
            "owner_id": "533267418676",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00571ef628494a3a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbfc49ee28648c01",
            "route_table_id": "rtb-0314d46a821a2f006",
            "subnet_id": "subnet-092d9242a5b7c0fa0"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.database",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.database",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eefe9ba47d46313",
            "route_table_id": "rtb-0314d46a821a2f006",
            "subnet_id": "subnet-02c5ca9812ceacf81"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.database",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.database",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a6f52482487c920",
            "route_table_id": "rtb-0314d46a821a2f006",
            "subnet_id": "subnet-0672fb9e00d223e88"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.database",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.database",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0586a93f144776a51",
            "route_table_id": "rtb-0350554dcc51f4e9f",
            "subnet_id": "subnet-07c8f8d0025e1acfc"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.private",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0cc3af70f71ce82",
            "route_table_id": "rtb-0350554dcc51f4e9f",
            "subnet_id": "subnet-0f3e61428d4bb4004"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.private",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096c7436a6506bc5b",
            "route_table_id": "rtb-0350554dcc51f4e9f",
            "subnet_id": "subnet-02fd143859f2e92ab"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.private",
            "module.vpc.module.aws_vpc.aws_subnet.private",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d74c250dafba966",
            "route_table_id": "rtb-0cfa6229215aea9ba",
            "subnet_id": "subnet-0696e887db769759c"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023efc24abf3221ce",
            "route_table_id": "rtb-0cfa6229215aea9ba",
            "subnet_id": "subnet-070e6a5a8afc45670"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cbacd1ba5b27411",
            "route_table_id": "rtb-0cfa6229215aea9ba",
            "subnet_id": "subnet-07a00ee4f5e4b5c41"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_route_table.public",
            "module.vpc.module.aws_vpc.aws_subnet.public",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-092d9242a5b7c0fa0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.10.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092d9242a5b7c0fa0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db-us-east-1a",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db-us-east-1a",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-02c5ca9812ceacf81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.10.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c5ca9812ceacf81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db-us-east-1b",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db-us-east-1b",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-0672fb9e00d223e88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.10.23.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0672fb9e00d223e88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db-us-east-1c",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-db-us-east-1c",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-07c8f8d0025e1acfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c8f8d0025e1acfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private-us-east-1a",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private-us-east-1a",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-0f3e61428d4bb4004",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3e61428d4bb4004",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private-us-east-1b",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private-us-east-1b",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-02fd143859f2e92ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fd143859f2e92ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private-us-east-1c",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-private-us-east-1c",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-0696e887db769759c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "20.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0696e887db769759c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public-us-east-1a",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public-us-east-1a",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-070e6a5a8afc45670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "20.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070e6a5a8afc45670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public-us-east-1b",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public-us-east-1b",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:subnet/subnet-07a00ee4f5e4b5c41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "20.10.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a00ee4f5e4b5c41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267418676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public-us-east-1c",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc-public-us-east-1c",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "vpc_id": "vpc-0bb56a94880505e3f"
          },
          "dependencies": [
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.module.aws_vpc.aws_vpc.this",
            "module.vpc.module.aws_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267418676:vpc/vpc-0bb56a94880505e3f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.10.0.0/16",
            "default_network_acl_id": "acl-0862f1fb228c185ca",
            "default_route_table_id": "rtb-03db2d390b1b95094",
            "default_security_group_id": "sg-090093622b97b2680",
            "dhcp_options_id": "dopt-01a0076fbf9c671e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb56a94880505e3f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03db2d390b1b95094",
            "owner_id": "533267418676",
            "tags": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            },
            "tags_all": {
              "BusinessOwner": "CSW242 Team",
              "CostCentre": "CCC001",
              "CreatedBy": "CSW242 Team",
              "Domain": "csw242",
              "Environment": "default",
              "Name": "csw242-default-vpc",
              "TechnicalOwner": "DevOps",
              "Terraform": "true",
              "TerraformWorkspace": "default"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}